feat: SegmentProducer支持200/400ms交替，窗口聚合日志与聚合函数日志优化